# Tomato-harvesting-robot-arm-with-stereo-camera-using-NanoDet-model

./: .gitignore  README.md
indy-ros2/interface_nodes/harvet_info/: CMakeLists.txt
indy-ros2/interface_nodes/harvet_info/src/: collect_logger.cpp
indy-ros2/interface_nodes/hmi_launcher/: setup.py
indy-ros2/interface_nodes/hmi_launcher/hmi_launcher/: hmi_qr.py  hmi_server.py  launch_all.py  launcher_gui_3.py  log_bus.py
indy-ros2/msg/collect_msgs/msg/: CollectMsg.msg
indy-ros2/msg/config_manager/: CMakeLists.txt  package.xml
indy-ros2/msg/config_manager/config/: setup.yaml  stereo_config.yaml
indy-ros2/msg/config_manager/msg/: SystemConfig.msg
indy-ros2/msg/config_manager/src/: config_manager.cpp
indy-ros2/msg/connect_msgs/: CMakeLists.txt
indy-ros2/msg/connect_msgs/msg/: ConnectMsg.msg  ConnectStatus.msg
indy-ros2/msg/res_msgs/: package.xml
indy-ros2/msg/res_msgs/msg/: PoseRes.msg  ResFlag.msg
indy-ros2/msg/test_msgs/: CMakeLists.txt
indy-ros2/msg/test_msgs/msg/: RosYolo.msg  YoloPose.msg
indy-ros2/msg/tomato_octomap_msgs/: CMakeLists.txt  package.xml
indy-ros2/msg/yolov8_msgs/msg/: InferenceResult.msg
indy-ros2/robot_actions/control_action/: CMakeLists.txt  package.xml
indy-ros2/robot_actions/control_action/action/: MoveRobot.action
indy-ros2/robot_actions/control_action/config/: setup.yaml
indy-ros2/robot_actions/control_action/src/: moveit_service_client.cpp  moveit_service_server.cpp
indy-ros2/robot_actions/gripper_action/: package.xml
indy-ros2/robot_actions/gripper_action/action/: GripperControl.action
indy-ros2/robot_actions/gripper_action/src/: gripper_action_server.cpp
indy-ros2/robot_actions/robot_home_action/: package.xml
indy-ros2/robot_actions/robot_home_action/src/: move_to_home_server.cpp
indy-ros2/robot_actions/robot_move_action/src/: moveit_service_client.cpp  moveit_service_server.cpp
indy-ros2/robot_main/indy_description/urdf/: generate_all_urdfs.sh  gripper.xacro  indy.urdf.xacro  indy_macro.xacro
indy-ros2/robot_main/indy_description/urdf_files/: icon3.urdf  indy12_v2.urdf  indy7.urdf  indy7_eye.urdf  indyrp2.urdf  indyrp2_v2.urdf
indy-ros2/robot_main/indy_driver/: package.xml
indy-ros2/robot_main/indy_driver/launch/: indy_bringup.launch.py
indy-ros2/robot_main/indy_gazebo/: CMakeLists.txt
indy-ros2/robot_main/indy_gazebo/controller/: indy_controllers_6dof.yaml
indy-ros2/robot_main/indy_gazebo/launch/: indy_gazebo.launch.py
indy-ros2/robot_main/indy_gazebo/worlds/: test.world  test2.world  test3.world
indy-ros2/robot_main/indy_interfaces/: package.xml
indy-ros2/robot_main/indy_moveit/launch/: indy_moveit_gazebo.launch.py  indy_moveit_real_robot.launch.py  moveit.launch.py
indy-ros2/robot_main/indy_moveit/moveit_config/: controllers_6dof.yaml  indy_servo.yaml
indy-ros2/robot_main/indy_moveit/rviz_config/: indy_moveit.rviz
indy-ros2/robot_services/start_request_service/: CMakeLists.txt  package.xml
indy-ros2/robot_services/start_request_service/src/: start_request_server.cpp
indy-ros2/robot_services/start_request_service/srv/: StartRequest.srv
indy-ros2/vision_nodes/camera_rectify_cpp/: CMakeLists.txt  package.xml
indy-ros2/vision_nodes/camera_rectify_cpp/config/: right_camera.yaml
indy-ros2/vision_nodes/camera_rectify_cpp/src/: camera_rectify_node.cpp
indy-ros2/vision_nodes/cpp_pubsub/: CMakeLists.txt  package.xml
indy-ros2/vision_nodes/cpp_pubsub/src/: subscriber_member_function.cpp
indy-ros2/vision_nodes/depth_map/: CMakeLists.txt  package.xml
indy-ros2/vision_nodes/depth_map/src/: depth_publisher_node.cpp
indy-ros2/vision_nodes/dual_publisher_node/: setup.cfg
indy-ros2/vision_nodes/pointcloud_cpp/: CMakeLists.txt  package.xml
indy-ros2/vision_nodes/pointcloud_cpp/src/: pointcloud_node.cpp
indy-ros2/vision_nodes/stereo_camera_info_cpp/: CMakeLists.txt  package.xml
indy-ros2/vision_nodes/stereo_camera_info_cpp/config/: disparity_param.yaml
indy-ros2/vision_nodes/stereo_camera_info_cpp/src/: stereo_camera_info_node.cpp
indy-ros2/vision_nodes/stereo_depth_cpp/: CMakeLists.txt  package.xml
indy-ros2/vision_nodes/stereo_depth_cpp/src/: stereo_depth_node.cpp
indy-ros2/vision_nodes/stereo_pointcloud/: setup.py
indy-ros2/vision_nodes/stereo_rectify_cpp/: CMakeLists.txt  package.xml
indy-ros2/vision_nodes/stereo_rectify_cpp/src/: stereo_rectify_node.cpp
indy-ros2/vision_nodes/yolobot_recognition_py/: package.xml  setup.py
indy-ros2/vision_nodes/yolobot_recognition_py/model/: name.txt  nanodet_model2.onnx
indy-ros2/vision_nodes/yolobot_recognition_py/yolobot_recognition_py/: yolo_with_ros2.py
src/indy-ros2/msg/collect_msgs/: CMakeLists.txt  (+1 more)
src/indy-ros2/robot_actions/control_action/: CMakeLists.txt  package.xml
src/indy-ros2/robot_actions/control_action/include/control_action/: action_requests.hpp  control_checks.hpp  execute_workflow.hpp  test_execute.hpp  workflow.hpp
src/indy-ros2/robot_actions/control_action/launch/: moveit_controller.launch.py
src/indy-ros2/robot_actions/control_action/src/: moveit_service_server.cpp
src/indy-ros2/robot_actions/gripper_action/: CMakeLists.txt
src/indy-ros2/robot_actions/gripper_action/src/: gripper_action_client.cpp  gripper_action_server.cpp
src/indy-ros2/robot_actions/robot_home_action/: CMakeLists.txt
src/indy-ros2/robot_actions/robot_home_action/action/: MoveToHome.action
src/indy-ros2/robot_actions/robot_home_action/src/: move_to_home_client.cpp  move_to_home_server.cpp
src/indy-ros2/robot_actions/robot_move_action/: CMakeLists.txt  package.xml
src/indy-ros2/robot_actions/robot_move_action/action/: MoveRobot.action
src/indy-ros2/robot_actions/robot_move_action/launch/: moveit_controller.launch.py
src/indy-ros2/robot_actions/robot_move_action/src/: moveit_service_server.cpp
src/indy-ros2/robot_services/harvest_flag_bridge/: CMakeLists.txt  package.xml
src/indy-ros2/robot_services/harvest_flag_bridge/src/: harvest_flag_bridge_node.cpp
src/indy-ros2/vision_nodes/cpp_pubsub/: CMakeLists.txt  package.xml
src/indy-ros2/vision_nodes/cpp_pubsub/src/: subscriber_member_function.cpp
(+203 files in other folders)
