<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nhut@todo.todo">nhut</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yolov8_msgs</depend>
  <depend>test_msgs</depend>
  <depend>res_msgs</depend>
  <depend>collect_msgs</depend>
  <depend>connect_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>control_action</depend>
  <depend>yaml-cpp</depend>
  <depend>image_geometry</depend>
  <depend>octomap_msgs</depend>
  <depend>tomato_octomap_msgs</depend>
  <depend>config_manager</depend>

  <exec_depend>opencv2</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
