<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_action</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nhut@todo.todo">nhut</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>test_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_interface_packages</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>res_msgs</depend>
  <depend>connect_msgs</depend>
  <depend>action_msgs</depend>
  <depend>robot_home_action</depend>
  <depend>gripper_action</depend>
  <depend>robot_move_action</depend>
  <depend>yaml-cpp</depend>
  <depend>collect_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_msgs</depend>
  <depend>tomato_octomap_msgs</depend>
  <depend>config_manager</depend>
  <depend>depth_signal_msgs</depend>
  <depend>position_signal_msgs</depend>
  <depend>skip_signal_msgs</depend>
  <depend>move_signal_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
